issue #127 mobile Process page body copy left aligned

--- a/styles/pages/process.scss
+++ b/styles/pages/process.scss
@@ -139,6 +139,13 @@
       line-height: $mobile_line2;
     }
     margin-bottom: $small;
+
+    @media(min-width: 700px) and (max-width: 1100px){
+      h2, h3{
+        font-size: $tab_type2;
+        line-height: $tab_line2;
+      }
+    }
   }
 
   #mobile-process-image-container{
@@ -155,20 +162,27 @@
   }
 
   #mobile-timeframe{
+    @media(min-width: 700px) and (max-width: 1100px){
+    font-size: $tab_type2;
+    line-height: $tab_line2;
+    padding: $small $medium;
+    }
     font-size: $mobile_type2;
     line-height: $mobile_line2;
-    padding: $small $medium;
+    padding: $small 0px;
   }
 
   #mobile-process-copy{
       padding-top: $small;
-      padding-left: $medium;
       font-size: $mobile_type2;
       line-height: $mobile_line2;
 
 
       @media(min-width: 700px) and (max-width: 1100px){
         padding: 0px;
+        font-size: $tab_type2;
+        line-height: $tab_line2;
+        padding-left: $medium;
       }
   }
 
